Fixed the default for the Fixed Status Bar Alignment option

--- a/src/scss/Info/styleSettingsConfig.scss
+++ b/src/scss/Info/styleSettingsConfig.scss
@@ -2964,7 +2964,7 @@ settings:
         description: Change the Horizontal Alignment of the Fixed Status Bar.
         type: class-select
         allowEmpty: false
-        default: pt-status-bar-align-center
+        default: pt-fixed-status-bar-align-center
         options:
             -
                 label: Left
